--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(TuringMachine C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(TuringMachine main.c header.h)
+add_executable(TuringMachine main.c header.h step.c output.c in.c )
